# advent-of-ocaml

./: .gitignore  .ocamlformat  COMPLETED.md  Makefile  PROBLEM.md  README.md  RESULT.md  aoc.opam  completed_days.ml  dune  dune-project  promote.ml
day_01/: dune  puzzle_01.ml  runner.ml  solution_01.ml  solution_01.mli
day_02/: dune  puzzle_02.ml  runner.ml  solution_02.ml
day_03/: dune
day_04/: dune
day_05/: dune
day_06/: dune
day_07/: dune
day_08/: dune
day_09/: dune
day_10/: dune
day_11/: dune
day_12/: dune
day_13/: dune
day_14/: dune  solution_14.ml
day_15/: dune
day_16/: dune
day_17/: dune
day_18/: dune
day_19/: dune
day_20/: dune
day_21/: dune
day_22/: dune
day_23/: dune  solution_23.mli
day_24/: dune
day_25/: dune
examples/: dune  modules.ml  testing.ml  try_parse.ml
lib/: dune  exmaples.ml  run.ml  run.mli  test.ml  util.ml
