; `dune` files in each directory specify the component to be built with the files in that directory.
; This is our top level dune file, it configures modification for our whole programming environment

(env
 ; Configure the dev compilation profile - the one we use by default.
 ; We are not making any release builds today.
 (dev
  ; OCaml compilation flags
  (flags
   ; Configure compiler warnings
   ; Dune makes all warnings fatal by default.
   ;
   ; -w      Means we are configuring warnings.
   ; -num    Disable warning number num.
   ; +num    Enable warning number num.
   ; -26     [unused-var] - disable.
   ; -27     [unused-var-strict] - disable.
   ; -32     [unused-value-declaration] - disable.
   ; -33     [unused-open] - disable.
   ;         Disable these for something as hacky as Advent of Code.
   ;
   ; for more info see `man ocamlc` and look for `-w warning-list`.
   (:standard -w -26-27-32-33))))

; if you want to disable EVERY warning you can do the following:
; (:standard -w -A))))

; Make warning non-fatal, use `-warn-error` flag instead of `-w`.
; (:standard -warn-error -32))))

(rule
 (mode promote)
 (alias runtest)
 (deps
  (glob_files **/*.expected))
 (action
  (with-stdout-to
   RESULT.md
   (run ./promote.exe))))

(executable
 (name promote)
 (public_name promote)
 (libraries aoc containers))
